--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'black ops one';
+  src: url('/fonts/BlackOpsOne-Regular.ttf') format('truetype'); /* Adjust the path and format as needed */
+  font-weight: 400;
+  font-style: normal;
+}
